--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -417,7 +417,7 @@
         "mode = \"append\"\n",
         "jdbc_url=\"jdbc:postgresql://dataviz.cjgykgllueiz.us-east-2.rds.amazonaws.com:5432/postgres\"\n",
         "config = {\"user\":\"postgres\", \n",
-        "          \"password\":\"databootcamp_123"\", \n",
+        "          \"password\":\"databootcamp_123\", \n",
         "          \"driver\":\"org.postgresql.Driver\"}"
       ],
       "execution_count": null,
